--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Coba Git Remote</title>
 </head>
 <body>
-  <h1>Hello World!</h1>  
+  <h1>Hello World!</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quia id ratione nulla sequi eligendi fugiat delectus numquam eveniet magnam, esse minus natus officiis blanditiis quibusdam in ab ipsa optio.</p>  
 </body>
 </html>
