--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <h1>Hello World!</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quia id ratione nulla sequi eligendi fugiat delectus numquam eveniet magnam, esse minus natus officiis blanditiis quibusdam in ab ipsa optio.</p>  
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quia id ratione nulla sequi eligendi fugiat delectus numquam eveniet magnam, esse minus natus officiis blanditiis quibusdam in ab ipsa optio.</p>
+  <ul>
+    <li>Satu</li>
+    <li>Dua</li>
+  </ul>
 </body>
 </html>
